Updates and fixes to Grunt, and starting to style the homepage and header menus.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -22,12 +22,12 @@ $link-color: $red;
 @import "header";
 @import "showcase";
 @import "content";
-@import "photos";
-@import "tiles";
 @import "stories";
 @import "quotes";
 @import "search";
 @import "footer";
 
 
+// magnific stuff
 @import "lightbox";
+
