--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -1,29 +1,27 @@
 header {
-  position: relative;
+	position: relative;
+	background: darken( $red, 7% );
+	z-index: 100;
 
-  .logo {
-	background: #b30838;
-	text-align: center;
-  }
-  
 	nav {
-		background: white;
 		@include clearfix;
 
 		ul li {
+			float: left;
+			position: relative;
+
 			a {
+				@include font-bold;
 				display: block;
-				text-align: center;
-				padding: 10px;
+				padding: 10px 12px;
 				text-decoration: none;
-				color: #25252a;
-				border-bottom: 1px solid #e5e5e8;
-				-webkit-transition: background-color 300ms ease-in-out;
+				color: white;
+				font-size: 10pt;
+				text-transform: uppercase;
 				transition: background-color 300ms ease-in-out;
 
 				&:hover {
-					color: #25252a;
-					background-color: #f2f3f4;
+					color: white;
 				}
 			}
 
@@ -31,95 +29,70 @@ header {
 				color: $red;
 				@include font-medium;
 			}
+
+			ul {
+				display: none;
+				position: absolute;
+				top: 44px;
+				width: 220px;
+				background: white;
+				z-index: 1000;
+			}
+
+			&:hover {
+				& > a {
+					background-color: darken( $red, 2% );
+				}
+
+				ul {
+					display: block;
+
+					li {
+						float: none;
+						display: block;
+
+						a {
+							@include font;
+							color: darken( $grey, 5% );
+							background-color: white;
+							padding: 6px 10px;
+
+							&:hover {
+								color: darken( $grey, 3% );
+								background-color: lighten( $grey, 50% );
+							}
+						}
+
+						ul {
+							display: none;
+							position: absolute;
+							top: 0;
+							left: 220px;
+							width: 220px;
+						}
+
+						&:hover {
+							& > a {
+								background-color: lighten( $grey, 45% );
+							}
+
+							ul {
+								display: block;
+
+								a {
+									background-color: white;
+
+									&:hover {
+										color: darken( $grey, 3% );
+										background-color: lighten( $grey, 50% );
+									}
+								}
+							}
+						}
+					}
+				}
+			}
 		}
   	}
 }
 
-@media only screen and (min-width: 768px) {
-  header {
-	height: 100px;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  header .logo {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 65%;
-	bottom: 0;
-	background: #b30838;
-	overflow: hidden;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  header .logo {
-	width: 20%;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  header nav {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 65%;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  header nav {
-	width: 80%;
-	text-align: right;
-  }
-}
-
-@media only screen and (min-width: 1100px) {
-  header nav {
-	padding-right: 10px;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  header nav ul li {
-	display: inline;
-  }
-}
-
-@media only screen and (min-width: 480px) {
-  header nav ul li a {
-	float: left;
-	width: 50%;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  header nav ul li a {
-	padding: 15px 0;
-	font-size: 15px;
-	line-height: 20px;
-	width: 33.33%;
-	background-color: transparent;
-	border-bottom: 0;
-	&:hover {
-	  background-color: rgba(229, 229, 232, 0.5);
-	}
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  header nav ul li a {
-	width: auto;
-	padding: 40px 10px;
-	float: none;
-	display: inline;
-	display: inline-block;
-  }
-}
-
-@media only screen and (min-width: 1100px) {
-  header nav ul li a {
-	padding: 40px 15px;
-  }
-}
