--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -6,6 +6,7 @@
 	height: 0;
 	transition: height 300ms ease-in-out;
 	background: $black;
+	z-index: 0;
 
 	.slide {
 		position: absolute;
@@ -19,6 +20,7 @@
 			left: 0;
 			right: 0;
 			opacity: 1;
+			z-index: 0;
 		}
 
 		&.hide-left {
