--- a/css/src/_footer.scss
+++ b/css/src/_footer.scss
@@ -7,10 +7,14 @@
 	padding: 10px 20px;
 
 	nav {
-		padding-top: 15px;
+		@include clearfix;
 
 		li:first-child a {
 			border-top: 0;
+
+			@include respond-to( 768px ) {
+				border-left: 0;
+			}
 		}
 
 		a {
@@ -20,10 +24,11 @@
 			text-decoration: none;
 			transition: color 400ms ease-in-out;
 			border-top: 4px solid $red-dark;
+			font-size: .85em;
 			
 			span {
 				display: block;
-				font-size: 2em;
+				font-size: 1.8em;
 				line-height: 1.2em;
 				text-transform: uppercase;
 			}
@@ -33,8 +38,14 @@
 			}
 
 			@include respond-to( 768px ) {
-					display: inline;
-					display: inline-block;
+				float: left;
+				width: 33%;
+				border: 0;
+			}
+
+			@include respond-to( 1100px ) {
+				width: 16.5%;
+				border-left: 4px solid $red-dark;
 			}
 		}
 
