--- a/css/src/_home.scss
+++ b/css/src/_home.scss
@@ -1,6 +1,8 @@
 
 
 .home-showcase {
+	position: relative;
+
 	nav.iam {
 		background: $red-dark;
 		padding: 10px 20px 20px;
@@ -25,6 +27,53 @@
 					font-size: 1.1em;
 					text-decoration: none;
 				}
+			}
+		}
+
+		@include respond-to( 900px ) {
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: 0;
+			padding: 0;
+			background: $red-light;
+			
+			h3 {
+				float: left;
+				font-size: 14px;
+				line-height: 20px;
+				padding: 12px 11px;
+				color: lighten( $red-light, 30% );
+			}
+
+			ul li {
+				margin: 0;
+
+				a {
+					float: left;
+					background: none;
+					border-radius: 0;
+					font-size: 14px;
+					line-height: 20px;
+					padding: 10px 11px;
+					color: white;
+				}
+			}
+		}
+
+		@include respond-to( 1040px ) {
+			ul li a, h3 {
+				padding: 12px 20px;
+			}
+		}
+
+		@include respond-to( 1220px ) {
+			ul li a {
+				padding: 12px 30px;
+			}
+
+			h3 {
+				padding: 12px 30px 12px 50px;
 			}
 		}
 	}
