Fixing footer text to look nice at all resolutions and adapt nicely.

--- a/css/src/_footer.scss
+++ b/css/src/_footer.scss
@@ -90,12 +90,43 @@
 
 .colophon {
 	padding: 20px;
+	font-size: .9em;
+	text-align: center;
 
 	.campus-map {
 		display: block;
 		padding: 20px;
 		line-height: 40px;
+		margin-top: 20px;
 		background: url(../img/map-icon.jpg) right center no-repeat;
+		text-align: left;
+	}
+	
+	@include respond-to( 768px ) {
+		.addresses {
+			float: left;
+			width: 30%;
+			padding: 10px 0;
+			margin-bottom: 50px;
+		}
+
+		.electronic {
+			float: right;
+			width: 30%;
+			padding: 10px 0;
+		}
+		
+		.campus-map {
+			float: left;
+			width: 35%;
+			margin-left: 20px;
+		}
+	}
+
+	@include respond-to( 900px ) {
+		.campus-map {
+			width: 275px;
+		}
 	}
 }
 
