Adding academics page template, adjusting styles, and setting up faculty content type.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -23,7 +23,9 @@ $link-color: $red-light;
 // then we'll include the section-specific styles
 @import "header";
 @import "showcase";
+@import "menus";
 @import "content";
+@import "widgets";
 @import "footer";
 
 
