--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -196,8 +196,8 @@ ol {
   list-style: decimal;
 }
 
-button {
-  padding: 10px;
+button, input[type=submit], input[type=reset] {
+  padding: 6px 10px;
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
   font-size: 1em;
@@ -207,24 +207,9 @@ button {
   border: 1px solid #b30838;
   text-transform: uppercase;
   -webkit-box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
-  box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
+  box-shadow: 0 0 10px rgba(37, 37, 42, 0.2);
 }
 
-input {
-  &[type=submit], &[type=reset] {
-	padding: 10px;
-	font-family: "Open Sans", sans-serif;
-	font-weight: 800;
-	font-size: 1em;
-	color: #b30838;
-	text-decoration: none;
-	background: white;
-	border: 1px solid #b30838;
-	text-transform: uppercase;
-	-webkit-box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
-	box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
-  }
-}
 
 .button {
   padding: 10px;
