--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -1,86 +1,5 @@
 
 
-.content-two-column {
-	padding: 30px 20px;
-	@include respond-to( 768px ) { padding: 50px 30px; }
-
-	h2 {
-		text-align: center;
-		text-transform: uppercase;
-	}
-
-	.column {
-		@include respond-to( 768px ) {
-			float: left;
-			width: 50%;
-		}
-	}
-}
-
-
-.content-alternating {
-	padding: 30px 0;
-
-	@include respond-to( 700px ) {
-		padding: 50px 0;
-
-		.row {
-			@include clearfix;
-
-			.row-content {
-				padding: 20px;
-				position: relative;
-
-				@include respond-to( 700px ) { 
-					padding: 30px; 
-				}
-
-				h2 {
-					@include font;
-					text-transform: uppercase;
-					font-size: 32px;
-					line-height: 38px;
-					padding: 10px 0 0;
-				}
-			}
-
-			&.odd .row-content:before {
-				content: "";
-				width: 0;
-				height: 0;
-				position: absolute;
-				top: 30px;
-				left: -60px;
-				border: 30px solid transparent;
-				border-right: 30px solid white;
-			}
-
-			&.even .row-content:before {
-				content: "";
-				width: 0;
-				height: 0;
-				position: absolute;
-				top: 30px;
-				right: -60px;
-				border: 30px solid transparent;
-				border-left: 30px solid white;
-			}
-
-			img, .row-content {
-				float: right;
-				width: 50%;
-			}
-
-			&.odd {
-				img, .row-content {
-					float: left;
-				}
-			}
-		}
-	}
-}
-
-
 .content-narrow {
 	padding: 15px 20px;
 	max-width: 700px;
@@ -92,11 +11,30 @@
 }
 
 
-.content-left {
+
+.quarter, .third, .half, .two-third, .three-quarter {
+	padding: 20px;
+	
 	@include respond-to( 768px ) {
-		padding: 20px 35px;
+		padding: 20px 15px;
+		float: left;
 	}
 }
+
+@include respond-to( 768px ) {
+	.quarter { width: 25%; }
+	.third { width: 33.33%; }
+	.half { width: 50%; }
+	.two-third { width: 66.6%; }
+	.three-quarter { width: 75%; }
+}
+
+
+
+.three-column {
+	padding: 0 0 30px;
+}
+
 
 
 .image {
