--- a/css/src/_home.scss
+++ b/css/src/_home.scss
@@ -284,6 +284,12 @@
 				width: 50px;
 				height: 50px;
 			}
+
+			h3 {
+				float: none;
+				width: 100%;
+				display: block;
+			}
 		}
 
 		.facebook:before { 
