--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -7,6 +7,7 @@
 	transition: height 300ms ease-in-out;
 	background: $black;
 	z-index: 0;
+	margin-bottom: 30px;
 
 	.slide {
 		position: absolute;
