--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -56,6 +56,7 @@
 				top: 15%;
 				left: 10%;
 				right: 50%;
+				padding: 25px;
 			}
 		}
 		
@@ -72,6 +73,7 @@
 			font-weight: 400;
 			padding: 0;
 			font-size: 13px;
+			line-height: 20px;
 		}
 	}
 
