--- a/css/src/_mixins.scss
+++ b/css/src/_mixins.scss
@@ -27,3 +27,14 @@
 	color: white;
 	text-shadow: 0 0 25px rgba( $black, .6 );
 }
+
+
+@mixin wrap( $max-width ) {
+	max-width: $max-width;
+	margin: 0 auto;
+}
+
+
+@mixin wrap-main {
+	@include wrap( 1220px );
+}
