--- a/css/src/_fonts.scss
+++ b/css/src/_fonts.scss
@@ -1,5 +1,20 @@
 
+// Google Webfonts
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,800italic,300,600,800);
+
+// FontAwesome
+@import "fontawesome";
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('fonts/fontawesome-webfont.eot');
+    src: url('fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/fontawesome-webfont.woff') format('woff'),
+         url('fonts/fontawesome-webfont.ttf') format('truetype'),
+         url('fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 @font-face {
