--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -1,5 +1,18 @@
 
 
+.content-area {
+	padding: 20px 0;
+
+	@include respond-to( 768px ) {
+		padding: 30px 20px;
+	}
+
+	@include respond-to( 1099px ) {
+		min-height: 550px;
+	}
+}
+
+
 .content-narrow {
 	padding: 15px 20px;
 	max-width: 700px;
@@ -36,7 +49,6 @@
 }
 
 
-
 .image {
 	@include respond-to( 768px ) {
 		width: 33.33%;
@@ -53,6 +65,20 @@
 	img {
 		display: block;
 		height: auto;
+	}
+}
+
+
+.btn {
+	padding: 12px 16px;
+	background: lighten( $grey, 50% );
+	color: $blue;
+	font-size: 12px;
+	text-transform: uppercase;
+	text-decoration: none;
+
+	&:hover {
+		background: lighten( $grey, 45% );
 	}
 }
 
