--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -40,6 +40,10 @@ $link-color: $red-light;
 @import "faculty";
 
 
+// area of interest
+@import "area";
+
+
 // magnific stuff
 @import "lightbox";
 
