--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -16,14 +16,15 @@
 			border: 6px solid $red-dark;
 			border-bottom: 0;
 			color: white;
+			cursor: pointer;
 
 			span { display: none; }
 
-			&:first-child { 
+			&.active { 
 				background: white;
 				border: 6px solid $grey;
 				border-bottom: 0;
-				margin-left: 0;
+				background: lighten( $grey, 55% );
 				color: $grey;
 				line-height: 25px;
 			}
@@ -44,15 +45,42 @@
 
 	.area-tab-content {
 		@include clearfix;
+		background: lighten( $grey, 55% );
 		border: 6px solid $grey;
 		padding: 15px;
 		display: none;
 		position: relative;
 		z-index: 1;
 		top: -6px;
+	
+		p {
+			@include font-medium;
+			padding: 0 0 12px;
+		}
 
 		&.majors {
 			display: block;
+		}
+
+		.column {
+			@include respond-to( 768px ) {
+				width: 50%;
+				display: inline;
+
+				&.one, &.two {
+					float: left;
+					clear: left;
+				}
+			}
+
+			@include respond-to( 1024px ) {
+				float: left;
+				width: 25%;
+
+				&.one, &.two {
+					clear: none;
+				}
+			}
 		}
 	}
 }
