--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -110,3 +110,146 @@
 	}
 }
 
+
+
+.showcase.stats {
+	background: #ebeae9;
+	margin-bottom: 30px;
+	@include clearfix;
+	@include respond-to( 768px ) {
+		height: 0;
+		position: relative;
+		overflow: hidden;
+		transition: height 300ms ease-in-out;
+		z-index: 0;
+	}
+	
+	.slide-wrapper {
+		max-width: 1100px;
+		margin: 0 auto;
+		background: white;
+		@include clearfix;
+
+		@include respond-to( 1024px ) {
+			margin: 40px auto;
+		}
+	}
+
+	.slide {
+		display: none;
+
+		@include respond-to( 768px ) {
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 100%;
+			right: -100%;
+			opacity: 0;
+			transition: left 400ms ease-in-out, right 400ms ease-in-out, opacity 400ms ease-in-out;
+		}	
+
+		&.visible {
+			display: block;
+
+			@include respond-to( 768px ) {
+				opacity: 1;
+				left: 0;
+				right: 0;
+				z-index: 0;
+			}
+		}
+
+		&.hide-left {
+			display: none;
+
+			@include respond-to( 768px ) {
+				display: block;
+				left: -100%;
+				right: 100%;
+				opacity: 0;
+			}
+		}
+		
+		a {
+			display: block;
+			@include clearfix;
+		}
+
+		img {
+			width: 100%;
+			height: auto !important;
+			display: block;
+
+			@include respond-to( 768px ) {
+				width: 65%;
+				float: right;
+			}
+		}
+		
+		.slide-content {
+			position: static;
+			top: auto;
+			right: auto;
+			left: auto;
+			background: white;
+			opacity: .8;
+			padding: 12px;
+			border-radius: 0;
+
+			@include respond-to( 768px ) {
+				padding: 25px;
+				width: 35%;
+				float: right;
+			}
+		}
+		
+		h1 {
+			font-weight: 700;
+			padding: 0;
+			color: $red-dark;
+
+			font-size: 18px;
+			@include respond-to( 768px ) { font-size: 22px; }
+		}
+
+		h2 {
+			font-weight: 400;
+			padding: 0;
+			font-size: 13px;
+			line-height: 20px;
+		}
+	}
+
+	.showcase-nav a {
+		position: absolute;
+		top: 50%;
+		margin-top: -40px;
+		cursor: pointer;
+		border-radius: 50%;
+		background: $red-dark;
+		width: 80px;
+		height: 80px;
+		text-indent: -300px;
+		overflow: hidden;
+		opacity: .7;
+
+		&:hover {
+			opacity: 1;
+		}
+
+		&.previous {
+			left: -30px;
+			background: $red-dark url(../img/slider-arrow-left.png) right center no-repeat;
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
+		}
+
+		&.next {
+			right: -30px;
+			background: $red-dark url(../img/slider-arrow-right.png) left center no-repeat;
+			border-top-right-radius: 0;
+			border-bottom-right-radius: 0;
+		}
+	}
+}
+
