Adding photo grid functionality.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -28,6 +28,7 @@ $link-color: $red-light;
 @import "menus";
 @import "content";
 @import "widgets";
+@import "photos";
 @import "tabs";
 @import "footer";
 
