--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -25,6 +25,7 @@ $link-color: $red-light;
 // general styles
 @import "header";
 @import "showcase";
+@import "infographic";
 @import "menus";
 @import "content";
 @import "widgets";
