Add hover style to current menu items.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -82,8 +82,8 @@ header {
 				}
 
 				&.current-menu-item > a {
-					color: lighten( $red-light, 40% );
-					@include font-medium;
+					color: white;
+					background-color: $red-light;
 				}
 
 				ul {
