--- a/css/src/_home.scss
+++ b/css/src/_home.scss
@@ -158,7 +158,7 @@
 	padding: 30px 0;
 	background: lighten( $grey, 55% );
 
-	h3 {
+	.wrap > h3 {
 		background: $red-dark;
 		color: white;
 		padding: 8px;
@@ -211,12 +211,12 @@
 		}
 	}
 
-	.facebook, .tumblr {
+	.facebook, .instagram {
 		display: none;
 	}
 
 	@include respond-to( 768px ) {
-		h3 {
+		.wrap > h3 {
 			width: 54%;
 			float: left;
 			padding: 2%;
@@ -270,7 +270,7 @@
 			}
 		}
 
-		.facebook, .tumblr {
+		.facebook, .instagram {
 			display: block;
 			position: relative;
 			width: 46%;
@@ -301,13 +301,9 @@
 			background-size: cover;
 		}
 
-		.tumblr {
+		.instagram {
 			overflow: auto;
-
-			&:before { 
-				background: url(../img/social-tumblr.png) center center no-repeat; 
-				background-size: cover;
-			}
+			padding: 20px;
 		}
 
 	}
