Add 5 more fields to the faculty info metabox and display the information only if it's not empty. Also add in "back to directory" button.

--- a/css/src/_faculty.scss
+++ b/css/src/_faculty.scss
@@ -215,6 +215,14 @@
 }
 
 
+button.back-to-faculty-list {
+	float: left;
+	position: relative;
+	left: 20px;
+	top: -20px;
+}
+
+
 .faculty .tab-content ul li {
 	padding: 2px 0 4px 35px;
 	color: lighten( $grey, 10% );
