Add custom Ripon Widget with title, icon, and content fields for generic use.

--- a/css/src/_faculty.scss
+++ b/css/src/_faculty.scss
@@ -33,7 +33,7 @@
 	}
 }
 
-.faculty-search-widget {
+.ripon-widget.faculty {
 	position: relative;
 	padding-top: 15px;
 	border-top: 4px double #ddd;
