--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -1,6 +1,6 @@
 
 .sidebar {
-	.widget {
+	.ripon-widget {
 		margin-top: 40px;
 		position: relative;
 		padding-top: 25px;
@@ -22,6 +22,14 @@
 			top: -22px;
 			left: 50%;
 			margin-left: -20px;
+		}
+
+		&.none:before {
+			display: none;
+		}
+
+		&.fa-question-circle:before {
+			content: $fa-var-question-circle;
 		}
 	}
 }
