--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -1,27 +1,34 @@
 
+
+@mixin widget-before {
+	display: block;
+	content: "\f02d";
+	font-family: "FontAwesome";
+	font-size: 22px;
+	line-height: 40px;
+	text-align: center;
+	background: $teal;
+	color: white;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	position: absolute;
+	top: -22px;
+	left: 50%;
+	margin-left: -20px;
+}
+
+
+
 .sidebar {
-	.ripon-widget {
-		margin-top: 40px;
+	.ripon-widget, .widget_video, .tribe-events-list-widget, .widget_recent_entries {
+		margin-top: 50px;
 		position: relative;
 		padding-top: 25px;
 		border-top: 4px double #ddd;
 
 		&:before {
-			display: block;
-			content: "\f02d";
-			font-family: "FontAwesome";
-			font-size: 22px;
-			line-height: 40px;
-			text-align: center;
-			background: $teal;
-			color: white;
-			width: 40px;
-			height: 40px;
-			border-radius: 50%;
-			position: absolute;
-			top: -22px;
-			left: 50%;
-			margin-left: -20px;
+			@include widget-before;
 		}
 
 		&.none:before {
@@ -31,6 +38,49 @@
 		&.fa-question-circle:before {
 			content: $fa-var-question-circle;
 		}
+
+		&.fa-calculator:before {
+			content: $fa-var-calculator;
+		}
+
+		&.fa-book:before {
+			content: $fa-var-book;
+		}
+
+		&.fa-briefcase:before {
+			content: $fa-var-briefcase;
+		}
+
+		&.fa-camera-retro:before {
+			content: $fa-var-camera-retro;
+		}
+
+		&.fa-gift:before {
+			content: $fa-var-gift;
+		}
+
+		&.fa-mortar-board:before {
+			content: $fa-var-mortar-board;
+		}
+
+		&.fa-map-marker:before {
+			content: $fa-var-map-marker;
+		}
 	}
+}
+
+
+.sidebar .widget_video:before {
+	content: $fa-var-video-camera;
+}
+
+
+.sidebar .tribe-events-list-widget:before {
+	content: $fa-var-calendar;
+}
+
+
+.sidebar .widget_recent_entries:before {
+	content: $fa-var-newspaper-o;
 }
 
