Add additional video class to sidebar widget styles.

--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -21,7 +21,7 @@
 
 
 .sidebar {
-	.ripon-widget, .widget_video, .tribe-events-list-widget, .widget_recent_entries {
+	.ripon-widget, .widget_video, .tribe-events-list-widget, .widget_recent_entries, .postmetavideo {
 		margin-top: 50px;
 		position: relative;
 		padding-top: 25px;
