Add a stylesheet with a few styles for the homepage event widget.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -27,6 +27,7 @@ $link-color: $red-light;
 // general styles
 @import "header";
 @import "showcase";
+@import "events";
 @import "infographic";
 @import "menus";
 @import "content";
