--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -53,14 +53,14 @@ header {
 			}
 
 			li {
-				&.menu-item-1031 a {
+				&.menu-item-2258 > a {
 					color: $blue-light;
 				}
 
 				a {
 					@include font-bold;
 					display: block;
-					padding: 10px 18px;
+					padding: 10px 15px;
 					text-decoration: none;
 					color: white;
 					font-size: 10pt;
@@ -71,7 +71,7 @@ header {
 						color: white;
 					}
 
-					@include respond-to( 1040px ) { padding: 10px 28px; }
+					@include respond-to( 1040px ) { padding: 10px 24px; }
 					@include respond-to( 1220px ) { padding: 10px 32px; }
 				}
 
@@ -92,6 +92,7 @@ header {
 					@include respond-to( $menu-breakpoint ) {
 						position: absolute;
 						top: 44px;
+						left: -110px;
 						width: 220px;
 						z-index: 1000;
 					}
