--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -82,10 +82,15 @@
 				}
 			}
 		}
+
 	}
 }
 
 .area {
+	.advising {
+		padding-top: 20px;
+	}
+
 	.tab-nav {
 		ul li {
 			padding: 20px 15px 20px 50px;
