Adds accordion boxes to 2 and 3 column templates, with metaboxes to manage them.

--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -103,7 +103,7 @@
 
 			&:before {
 				position: absolute;
-				font-family: "FontAwesome", sans-serif;
+				@include font-awesome;
 				left: 10px;
 				top: 19px;
 				width: 30px;
