--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -34,6 +34,7 @@ $link-color: $red-light;
 @import "widgets";
 @import "photos";
 @import "tabs";
+@import "accordions";
 @import "footer";
 @import "emergency";
 
