Refines search result styles, fixes an issue where general search was limited to areas of interest.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -31,6 +31,7 @@ $link-color: $red-light;
 @import "infographic";
 @import "menus";
 @import "content";
+@import "search";
 @import "widgets";
 @import "photos";
 @import "tabs";
