--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -175,38 +175,8 @@ header {
 			position: absolute;
 			right: 5%;
 			top: 50%;
-			margin: -20px 0 150px;
+			margin: -20px 0 0;
 			width: 400px;
-  		}
-
-  		input[type=text] {
-  			position: absolute;
-  			top: 0;
-  			left: 0;
-  			right: 40px;
-  			display: block;
-  			margin: 0;
-  			width: 100%;
-  			border: 0;
-  			line-height: 40px;
-  			font-size: 14px;
-  			padding: 0 15px;
-  			text-transform: uppercase;
-  		}
-
-  		button {
-  			position: absolute;
-  			top: 0;
-  			right: 0;
-  			width: 40px;
-  			height: 40px;
-			background: $red-light;
-  			color: white;
-  			margin: 0;
-  			border: 0;
-  			box-shadow: none;
-			text-align: center;
-			vertical-align: middle;
   		}
   	}
 }
