--- a/css/src/_search.scss
+++ b/css/src/_search.scss
@@ -35,3 +35,47 @@
 	}
 }
 
+
+.search {
+	position: relative;
+	height: 40px;
+	border-bottom: 1px solid lighten( $grey, 50% );
+
+	.content-narrow & {
+		max-width: 400px;
+		border: 1px solid $red-light;
+		height: 42px;
+		margin: 20px 0;
+	}
+
+	input[type=text] {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 40px;
+		display: block;
+		margin: 0;
+		width: 100%;
+		border: 0;
+		line-height: 40px;
+		font-size: 14px;
+		padding: 0 15px;
+		text-transform: uppercase;
+	}
+
+	button {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 40px;
+		height: 40px;
+		background: $red-light;
+		color: white;
+		margin: 0;
+		border: 0;
+		box-shadow: none;
+		text-align: center;
+		vertical-align: middle;
+	}
+}
+
