--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -21,6 +21,39 @@
 	@include respond-to( 768px ) {
 		padding: 40px 0;
 	}
+
+	img {
+		max-width: 50%;
+
+		@include respond-to( 768px ) {
+			max-width: 60%;
+		}
+		
+		&.alignright, &.wp-post-image {
+			margin: 0 -20px 15px 15px;
+			float: right;
+
+			@include respond-to( 768px ) {
+				margin-right: -40px;
+			}
+
+			@include respond-to( 900px ) {
+				margin-right: -12%;
+			}
+		}
+
+		&.alignleft {
+			margin: 0 15px 15px -20px;
+
+			@include respond-to( 768px ) {
+				margin-left: -40px;
+			}
+
+			@include respond-to( 900px ) {
+				margin-left: -12%;
+			}
+		}
+	}
 }
 
 
