--- a/css/src/_news.scss
+++ b/css/src/_news.scss
@@ -10,5 +10,20 @@
 		float: left;
 		margin: 0 10px 0 0;
 	}
+
+	.post-meta {
+		font-size: .9em;
+		font-style: italic;
+		color: lighten( $grey, 20% );
+		padding: 6px 0;
+
+		a {
+			color: lighten( $grey, 20% );
+
+			&:hover {
+				color: lighten( $grey, 30% );
+			}
+		}
+	}
 }
 
