--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -174,6 +174,14 @@ hr {
   margin: 25px 0;
 }
 
+blockquote {
+  quotes: "" "";
+  font-size: 1.3em;
+  line-height: 1.5em;
+  font-style: italic;
+  color: lighten( $grey, 10% );
+  padding: 3px 30px;
+}
 
 article {
   ol, ul {
