Target job listing styles.

--- a/css/src/_jobs.scss
+++ b/css/src/_jobs.scss
@@ -1,12 +1,9 @@
 
+.entry-content ul li {
+	background: none;
 
-.job_listings {
-	li {
-		background: none;
-
-		.meta li {
-			padding: 4px 0;
-		}
+	.meta li {
+		padding: 4px 0;
 	}
 }
 
