--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -20,7 +20,7 @@
 
 
 .sidebar {
-	.ripon-widget, .widget_video, .tribe-events-list-widget, .tribe-events-adv-list-widget, .tribe_mini_calendar_widget, .widget_recent_entries, .postmetavideo {
+	.ripon-widget, .widget_video, .tribe-events-list-widget, .tribe-events-adv-list-widget, .tribe_mini_calendar_widget, .widget_recent_entries, .postmetavideo, .cat-post-widget, .widget_categories {
 		margin-top: 50px;
 		position: relative;
 		padding-top: 25px;
@@ -79,7 +79,7 @@
 }
 
 
-.sidebar .widget_recent_entries:before {
+.sidebar .widget_recent_entries:before, .sidebar .cat-post-widget, .sidebar .widget_categories {
 	content: $fa-var-newspaper-o;
 }
 
