Adds "back to areas of study" button to single area template.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -216,6 +216,7 @@ button, input[type=submit], input[type=reset] {
   text-transform: uppercase;
   -webkit-box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
   box-shadow: 0 0 10px rgba(37, 37, 42, 0.2);
+  cursor: pointer;
 }
 
 
@@ -231,6 +232,7 @@ button, input[type=submit], input[type=reset] {
   text-transform: uppercase;
   -webkit-box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
   box-shadow: 0 0 20px rgba(37, 37, 42, 0.3);
+  cursor: pointer;
 }
 
 .quiet {
