--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -91,6 +91,26 @@
 		padding-top: 20px;
 	}
 
+	.back-to-areas {
+		display: block;
+		width: 100%;
+		padding: 15px 0 15px 45px;
+		position: relative;
+
+		&:before {
+			position: absolute;
+			left: 5px;
+			top: 50%;
+			margin-top: -15px;
+			width: 30px;
+			height: 30px;
+			font-size: 24px;
+			line-height: 30px;
+			@include font-awesome;
+			content: $fa-var-chevron-left;
+		}
+	}
+
 	.tab-nav {
 		ul li {
 			padding: 20px 15px 20px 50px;
