Updates dropdown menu styles so they align with the left of the main menu item.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -92,7 +92,7 @@ header {
 					@include respond-to( $menu-breakpoint ) {
 						position: absolute;
 						top: 44px;
-						left: -110px;
+						left: 0;
 						width: 220px;
 						z-index: 1000;
 					}
