Add UL styles to content inside the content-narrow divs.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -165,7 +165,7 @@ a.button {
 }
 
 
-.entry-content, .tab-content {
+.entry-content, .tab-content, .content-narrow {
 	ol {
 		padding: 8px 0 12px 40px;
 
