--- a/css/src/_tabs.scss
+++ b/css/src/_tabs.scss
@@ -2,6 +2,7 @@
 
 .tab-content {
 	display: none;
+	@extend .entry-content;
 
 	&.first {
 		display: block;
@@ -55,6 +56,7 @@ $tab-border-size: 8px;
 		padding: 3px 15px;
 		min-height: 120px;
 		margin-bottom: 20px;
+		@extend .entry-content;
 
 		@include respond-to( 768px ) {
 			display: none;
